Style fixes
- Fix layout shift in combo card
- Fix hover animation in parts subgrid

--- a/source/stylesheets/components/_partsgrid.scss
+++ b/source/stylesheets/components/_partsgrid.scss
@@ -79,6 +79,6 @@
 
 @include hover-capable {
   .parts-grid button:not(.selected):hover {
-    background-color: var(--color-interactive);
+    background-color: var(--color-interactive-fg);
   }
 }
